Fixed alignment of buttons on add spreadsheet on setup.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,6 +52,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .row-block {
   display: inline-block;
   margin: .5rem auto;
+  width: 100%;
 }
 
 .row-flex {
